--- a/work/02_assignment_Final.ipynb
+++ b/work/02_assignment_Final.ipynb
@@ -4406,7 +4406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "id": "c9f746e7-5c7c-4d3a-af78-bfbfbb1ee1f4",
    "metadata": {},
    "outputs": [
@@ -4414,10 +4414,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            State   Density\n",
-      "42   Puerto Rico   238.2622\n",
+      "            State     Density\n",
+      "42   Puerto Rico   370.531574\n",
       "      State   Density\n",
-      "1   Alaska   0.425564\n"
+      "1   Alaska   0.496221\n"
      ]
     }
    ],
@@ -4426,7 +4426,7 @@
     "\n",
     "mask2 = merged[\"Status\"] == \"Territory\"\n",
     "\n",
-    "merged[\"Density\"] = merged[\"Pop_2020\"]/merged[\"Area_tot\"]\n",
+    "merged[\"Density\"] = merged[\"Pop_2020\"]/merged[\"Area_land\"]\n",
     "print(merged[mask2][[\"State\", \"Density\"]].sort_values(by= \"Density\", ascending =False).head(1))\n",
     "\n",
     "\n",
