--- a/work/02_assignment_Final.ipynb
+++ b/work/02_assignment_Final.ipynb
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "dbae146b-3d5a-486e-8c30-9bb076fa9cbe",
    "metadata": {},
    "outputs": [
@@ -2516,7 +2516,7 @@
        "[56 rows x 29 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2536,7 +2536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "5e31226d-bce4-4141-88e2-89c18416752e",
    "metadata": {},
    "outputs": [],
@@ -2547,7 +2547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "54144518-978c-4c13-81d6-7334a336d998",
    "metadata": {},
    "outputs": [
@@ -4355,7 +4355,7 @@
        "[56 rows x 33 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4406,7 +4406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "id": "c9f746e7-5c7c-4d3a-af78-bfbfbb1ee1f4",
    "metadata": {},
    "outputs": [
@@ -4416,6 +4416,7 @@
      "text": [
       "            State     Density\n",
       "42   Puerto Rico   370.531574\n",
+      "\n",
       "      State   Density\n",
       "1   Alaska   0.496221\n"
      ]
@@ -4429,10 +4430,13 @@
     "merged[\"Density\"] = merged[\"Pop_2020\"]/merged[\"Area_land\"]\n",
     "print(merged[mask2][[\"State\", \"Density\"]].sort_values(by= \"Density\", ascending =False).head(1))\n",
     "\n",
+    "print(\"\")\n",
     "\n",
     "mask3 = merged[\"Status\"] == \"State\"\n",
     "\n",
-    "print(merged[mask3][[\"State\", \"Density\"]].sort_values(by = \"Density\", ascending = True).head(1))"
+    "print(merged[mask3][[\"State\", \"Density\"]].sort_values(by = \"Density\", ascending = True).head(1))\n",
+    "\n",
+    "print(\"The answer would be Puerto Rico"
    ]
   },
   {
