--- a/work/02_assignment_Final.ipynb
+++ b/work/02_assignment_Final.ipynb
@@ -4406,7 +4406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "c9f746e7-5c7c-4d3a-af78-bfbfbb1ee1f4",
    "metadata": {},
    "outputs": [
@@ -4418,7 +4418,9 @@
       "42   Puerto Rico   370.531574\n",
       "\n",
       "      State   Density\n",
-      "1   Alaska   0.496221\n"
+      "1   Alaska   0.496221\n",
+      "\n",
+      "The answer would be Puerto Rico\n"
      ]
     }
    ],
@@ -4436,7 +4438,9 @@
     "\n",
     "print(merged[mask3][[\"State\", \"Density\"]].sort_values(by = \"Density\", ascending = True).head(1))\n",
     "\n",
-    "print(\"The answer would be Puerto Rico"
+    "print(\"\")\n",
+    "\n",
+    "print(\"The answer would be Puerto Rico\")"
    ]
   },
   {
