--- a/work/03_assignment_Final.ipynb
+++ b/work/03_assignment_Final.ipynb
@@ -471,6 +471,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6e78920d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#Make a column called Date that is in the pandas datetime format\n",
+    "\n",
+    "\n",
+    "dates = df[\"Month Day, Year Code\"]\n",
+    "df[\"Date\"] = pd.to_datetime(dates)\n",
+    "mask = df[\"Date\"].astype(str)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "27e49047",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df['DateInt'] = df['Date'].astype(int)/10e10 # This will be used later"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a8b8c17",
+   "metadata": {},
+   "source": [
+    "## Generating a scatter plot"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3243e831",
    "metadata": {},
@@ -480,8 +516,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "6e78920d",
+   "execution_count": 7,
+   "id": "4e824951-b519-455d-8424-2ee00c9ea6e0",
    "metadata": {},
    "outputs": [
     {
@@ -684,40 +720,14 @@
        "[12055 rows x 9 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "#Make a column called Date that is in the pandas datetime format\n",
-    "\n",
-    "\n",
-    "dates = df[\"Month Day, Year Code\"]\n",
-    "df[\"Date\"] = pd.to_datetime(dates)\n",
-    "mask = df[\"Date\"].astype(str)\n",
     "df[[\"Year\", \"Month\", \"Day\"]] = mask.str.split('-', expand =True)\n",
-    "\n",
     "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "27e49047",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df['DateInt'] = df['Date'].astype(int)/10e10 # This will be used later"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9a8b8c17",
-   "metadata": {},
-   "source": [
-    "## Generating a scatter plot"
    ]
   },
   {
@@ -730,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "eaa574e1",
    "metadata": {},
    "outputs": [
@@ -740,7 +750,7 @@
        "<AxesSubplot:xlabel='Date', ylabel='Avg Daily Max Air Temperature (F)'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -775,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "273d7288-d738-4998-8cae-c50023058b6a",
    "metadata": {},
    "outputs": [
@@ -803,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "464c688f",
    "metadata": {},
    "outputs": [
@@ -811,7 +821,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2154066/2382980842.py:10: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_2187882/2382980842.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -843,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "851e0928",
    "metadata": {},
    "outputs": [
@@ -853,7 +863,7 @@
        "<AxesSubplot:xlabel='Date', ylabel='Avg Daily Max Air Temperature (F)'>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -896,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "9c90abe4",
    "metadata": {},
    "outputs": [],
@@ -929,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "1971ab44",
    "metadata": {},
    "outputs": [
@@ -939,7 +949,7 @@
        "<AxesSubplot:xlabel='Date1', ylabel='AvgTemp'>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -998,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "4a89e92a",
    "metadata": {},
    "outputs": [],
@@ -1010,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "6f6d5c6f",
    "metadata": {},
    "outputs": [],
@@ -1040,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "58ecc8fb",
    "metadata": {},
    "outputs": [
@@ -1058,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "e7a8ec6c",
    "metadata": {},
    "outputs": [
@@ -1095,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "91e27f1b",
    "metadata": {},
    "outputs": [
@@ -1121,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "9ac0f059",
    "metadata": {},
    "outputs": [
@@ -1161,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "10b99a46",
    "metadata": {},
    "outputs": [
@@ -1218,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "e4ea74a2",
    "metadata": {},
    "outputs": [
@@ -1226,21 +1236,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slope would be: 3.072410840971274e-07, so it would be positive but it would be very tiny and it shows the change of the degrees over time.\n"
+      "The slope would be: 3.072410840971274e-07, so it would be positive but it would be very tiny and it shows that the average temperature in degrees is changing very slowly over time. Another interpretation could be that the number is so small that you would need to compute the p-value in order to determine the significance. Thus, no linear relationship. \n"
      ]
     }
    ],
    "source": [
-    "print(\"The slope would be: 3.072410840971274e-07, so it would be positive but it would be very tiny and it shows that the average temperature in degrees is changing very slowly over time.\")"
+    "print(\"The slope would be: 3.072410840971274e-07, so it would be positive but it would be very tiny and it shows that the average temperature in degrees is changing very slowly over time. Another interpretation could be that the number is so small that you would need to compute the p-value in order to determine the significance. Thus, no linear relationship. \")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02857d95-57b7-4705-b0d5-39d124c23866",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
