--- a/work/Final_Project.ipynb
+++ b/work/Final_Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "cf390444-b287-4b50-9420-b737e44de2fd",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "02e16333-f964-4d2a-b77d-ad5a46428d5e",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "e4b66957-67f1-4811-b4ee-7a736804058a",
    "metadata": {},
    "outputs": [
@@ -500,7 +500,7 @@
        "[135 rows x 25 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "id": "70331ca2-fc8f-4aaa-b654-7d3320cae64b",
    "metadata": {},
    "outputs": [
@@ -532,7 +532,7 @@
        "Name: Beach Name\\n(Def.), Length: 135, dtype: object"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "id": "f6afe019-b931-4ce0-bbe9-775224b62d4f",
    "metadata": {},
    "outputs": [
@@ -577,7 +577,7 @@
        "Name: Result\\nAnalytical\\nMethod\\nIdentifier\\n(Def.), Length: 135, dtype: object"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "id": "ab34e428-9b54-41f5-abd0-59a09bf27a82",
    "metadata": {},
    "outputs": [
@@ -612,7 +612,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "id": "e706166d-eaff-4ba0-8a6b-e9ccaf0c2446",
    "metadata": {},
    "outputs": [
@@ -767,7 +767,7 @@
        "[135 rows x 4 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "id": "051c44a0-3aa5-44fe-a96f-fccc2432ed1e",
    "metadata": {},
    "outputs": [
@@ -786,7 +786,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sum: 14.486269841269841\n"
+      "Mean: 14\n"
      ]
     }
    ],
@@ -795,21 +795,116 @@
     "\n",
     "calculation = df[\"Result\\nValue\\n(Def.)\"].mean()\n",
     "\n",
-    "print(\"Mean for Result:\", calculation)"
+    "print(\"Mean:\", round(calculation))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8b811610-b7ca-4ce7-a448-06633673a6aa",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       3.00\n",
+       "1       2.00\n",
+       "2       3.00\n",
+       "3       4.00\n",
+       "4      11.00\n",
+       "       ...  \n",
+       "130     2.71\n",
+       "131     1.00\n",
+       "132     2.71\n",
+       "133    20.00\n",
+       "134      NaN\n",
+       "Name: Result, Length: 135, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Result'] = df['Result\\nValue\\n(Def.)'] \n",
+    "df['Result']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7311df61-9515-48b9-8d3c-7b6d768e5fc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hello = df['Result']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "7f92b986-6193-468c-a508-b4c7c517a1db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hello = hello.fillna(\"nan\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "1567ed1e-1613-40a4-8c37-b1f9c98537cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3      4.0\n",
+       "4     11.0\n",
+       "5      8.0\n",
+       "6      4.0\n",
+       "7     14.0\n",
+       "8      2.0\n",
+       "9      5.0\n",
+       "10     3.0\n",
+       "11     6.0\n",
+       "12    31.0\n",
+       "13    17.0\n",
+       "14     1.0\n",
+       "15     1.0\n",
+       "16     9.0\n",
+       "17     2.0\n",
+       "18     1.0\n",
+       "19     2.0\n",
+       "20    28.0\n",
+       "21     1.0\n",
+       "22     1.0\n",
+       "23        \n",
+       "24        \n",
+       "25        \n",
+       "26     8.0\n",
+       "27    10.0\n",
+       "28    20.0\n",
+       "29     9.0\n",
+       "Name: Result, dtype: object"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hello[3:30]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b811610-b7ca-4ce7-a448-06633673a6aa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7311df61-9515-48b9-8d3c-7b6d768e5fc7",
+   "id": "e1985fdd-aa1a-49aa-92fd-e47c9709ac6c",
    "metadata": {},
    "outputs": [],
    "source": []
